feat: Reverted red blob detection, fixed newBlob ReferenceError, and limited blue box detection retries.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <button id="startLiveViewBtn" class="btn btn-success">Start Live View</button>
                         <button id="stopLiveViewBtn" class="btn btn-danger" style="display: none;">Stop Live View</button>
                         <button id="toggleFinishBuildBtn" class="btn btn-secondary">Start Finish Build</button>
+                        <button id="toggleFinishLevelBtn" class="btn btn-secondary">Start Finish Level</button>
                     </div>
                     <div class="status-info">
                         <div><span id="statusText">Ready</span></div>
