Feat: Implemented smooth and sustained click-drag scrolling using robotjs

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                         <button id="stopLiveViewBtn" class="btn btn-danger" style="display: none;">Stop Live View</button>
                         <button id="toggleFinishBuildBtn" class="btn btn-secondary">Start Finish Build</button>
                         <button id="toggleFinishLevelBtn" class="btn btn-secondary">Start Finish Level</button>
+                        <button id="scrollDownBtn" class="btn btn-info">Scroll Down</button>
+                        <button id="scrollUpBtn" class="btn btn-info">Scroll Up</button>
+                        <button id="scrollToBottomBtn" class="btn btn-info">Scroll to Bottom</button>
                     </div>
                     <div class="status-info">
                         <div><span id="statusText">Ready</span></div>
