Major automation improvements: robotjs migration, blue build detection fixes, and scroll enhancements
- Replace all cliclick functionality with robotjs equivalents for better performance
- Fix blue box detector to prevent coexistence of blue builds and grey max builds
- Fix scrollDown function bug (undefined scrollDistance parameter)
- Add second red blob detection before scrolling up to catch wiggling blobs
- Fix missing scroll-to-bottom after successful first build on new levels
- Reset hasFinishedBuildOnce flag when new level starts
- Distinguish between max_build_at_startup vs completed max builds
- Increase finishBuild MAX_RETRIES to 3 and add detection delays
- Fix level duration tracking NaN issues
- Add 200ms delays for UI stability in prepBuild and confirmAndClickBlueBuildBox
- Modify scrollToTop and scrollToBottom to use multiple smaller scrolls (10x300px)
- Change clickAround to 6 scrolls and 4 sets for red blob stability detection

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <button id="stopLiveViewBtn" class="btn btn-danger" style="display: none;">Stop Live View</button>
                         <button id="toggleFinishBuildBtn" class="btn btn-secondary">Start Finish Build</button>
                         <button id="toggleFinishLevelBtn" class="btn btn-secondary">Start Finish Level</button>
+                        <button id="toggleClickAroundBtn" class="btn btn-secondary">Start Click Around</button>
                         <button id="scrollDownBtn" class="btn btn-info">Scroll Down</button>
                         <button id="scrollUpBtn" class="btn btn-info">Scroll Up</button>
                         <button id="scrollToBottomBtn" class="btn btn-info">Scroll to Bottom</button>
@@ -34,11 +35,11 @@
                         <h3>Scroll Settings</h3>
                         <div class="control-group">
                             <label for="scrollSwipeDistance">Scroll Swipe Distance (px):</label>
-                            <input type="number" id="scrollSwipeDistance" value="100" min="10">
+                            <input type="number" id="scrollSwipeDistance" value="300" min="10">
                         </div>
                         <div class="control-group">
                             <label for="scrollToBottomIterations">Scroll to Bottom Iterations:</label>
-                            <input type="number" id="scrollToBottomIterations" value="20" min="1">
+                            <input type="number" id="scrollToBottomIterations" value="10" min="1">
                         </div>
                         <div class="control-group">
                             <label for="scrollUpAttempts">Scroll Up Attempts Before Reset:</label>
