Implement hybrid global mouse movement pause system
CORE FEATURES:
- Global mouse position monitoring with configurable thresholds (5px default)
- Automatic pause on mouse movement, resume after 2s idle (configurable)
- Non-invasive state function hijacking (no automation code changes)
- RobotJS operation interception prevents clicks/movements during pause

TECHNICAL IMPLEMENTATION:
- State getter functions modified to respect isGloballyPaused flag
- All automation loops naturally pause when getIsAutomationRunning() returns false
- Mouse operations (click, move, drag, toggle) silently skipped when paused
- 100ms monitoring interval for responsive detection

UI CONTROLS:
- Enable/disable toggle for pause system
- Mouse movement threshold setting (1-50px)
- Resume delay configuration (500-10000ms)
- Force resume button for manual override
- Real-time pause status display

INTEGRATION:
- Works with finishBuild, finishLevel, and clickAround automations
- Preserves existing pause mechanisms (clickAround mouse detection)
- IPC handlers for settings management
- Automatic startup with app initialization

GRANULARITY: Operation-level pausing (~1-2s response time)
SAFETY: No automation code modified - uses existing architecture

--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
                             <input type="number" id="scrollUpAttempts" value="15" min="1">
                         </div>
                     </div>
+                    <div class="pause-controls-settings">
+                        <h3>Global Pause Settings</h3>
+                        <div class="control-group">
+                            <label for="pauseEnabled">
+                                <input type="checkbox" id="pauseEnabled" checked> Enable Mouse Movement Pause
+                            </label>
+                        </div>
+                        <div class="control-group">
+                            <label for="mouseThreshold">Mouse Movement Threshold (px):</label>
+                            <input type="number" id="mouseThreshold" value="5" min="1" max="50">
+                        </div>
+                        <div class="control-group">
+                            <label for="idleTime">Resume Delay (ms):</label>
+                            <input type="number" id="idleTime" value="2000" min="500" max="10000" step="500">
+                        </div>
+                        <div class="control-group">
+                            <button id="forceResumeBtn" class="btn btn-warning">Force Resume</button>
+                        </div>
+                        <div class="control-group">
+                            <span id="pauseStatus">Pause Status: Ready</span>
+                        </div>
+                    </div>
                     <div class="status-info">
                         <div><span id="currentFunction">Idle</span></div>
                         <div><span id="currentLevelDuration">Current Level: 0m 0s</span></div>
