--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </div>
                     <div class="status-info">
                         <div><span id="currentFunction">Idle</span></div>
+                        <div><span id="currentLevelName">Level: Unknown Level</span></div>
                         <div><span id="currentLevelDuration">Current Level: 0m 0s</span></div>
                         <div><span id="previousLevelDuration">Previous Level: N/A</span></div>
                         <div><span id="longestLevelDuration">Longest Level: N/A</span></div>
