Update UI interface and automation flow
- Remove Start Finish Build button and three scroll buttons
- Rename Start Finish Level to Start (start-only button)
- Add Stop button to stop all automation
- Rename Start Click Around to Click Around True (exclude red blobs)
- Add Click Around False button (include red blobs)
- Update click around button state management with proper reset on completion
- Change finishBuild 3-minute timer to exit gracefully after clickAround
- Add proper return value handling for clickaround_completed status
- Improve automation flow control between finishBuild and finishLevel

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
                     <div class="controls">
                         <button id="startLiveViewBtn" class="btn btn-success">Start Live View</button>
                         <button id="stopLiveViewBtn" class="btn btn-danger" style="display: none;">Stop Live View</button>
-                        <button id="toggleFinishBuildBtn" class="btn btn-secondary">Start Finish Build</button>
-                        <button id="toggleFinishLevelBtn" class="btn btn-secondary">Start Finish Level</button>
-                        <button id="toggleClickAroundBtn" class="btn btn-secondary">Start Click Around</button>
-                        <button id="scrollDownBtn" class="btn btn-info">Scroll Down</button>
-                        <button id="scrollUpBtn" class="btn btn-info">Scroll Up</button>
-                        <button id="scrollToBottomBtn" class="btn btn-info">Scroll to Bottom</button>
+                        <button id="startBtn" class="btn btn-secondary">Start</button>
+                        <button id="stopBtn" class="btn btn-danger">Stop</button>
+                        <button id="clickAroundTrueBtn" class="btn btn-secondary">Click Around True</button>
+                        <button id="clickAroundFalseBtn" class="btn btn-secondary">Click Around False</button>
                     </div>
                     <div class="scroll-controls-settings">
                         <h3>Scroll Settings</h3>
